# markus-api

./: .gitignore  .travis.yml  Changelog.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
markusapi/: __init__.py  markusapi.py  response_parser.py
markusapi/tests/: test_markusapi.py
src/markusapi/: __init__.py
tests/: test_markusapi.py
