[project]
name = "markusapi"
version = "0.3.0"
authors = [
  { name="Sam Maldonado" },
  { name="Alessio Di Sandro" },
  { name="Misha Schwartz" },
]
maintainers = [
  { name="David Liu", email="david@cs.toronto.edu" },
]
description = "Python API client for MarkUs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "requests~=2.32.5",
]

[project.urls]
Homepage = "https://github.com/MarkUsProject/markus-api"
Issues = "https://github.com/MarkUsProject/markus-api/issues"

[build-system]
requires = ["uv_build >= 0.9.17, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]

[tool.uv.workspace]
members = [
    "markusapi",
]
